AUT-2794 Remove SID notification flow
