# doc/api-specification.yml
@@ -672,217 +672,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
-  /auth/sid/init:
-    post:
-      tags:
-        - smart-id
-      summary: Start's the Smart-ID authentication process
-      operationId: startSidAuth
-      description: |
-        Starts Smart-ID authentication
-      parameters:
-        - name: Session cookie
-          in: header
-          required: true
-          description: Session cookie
-          schema:
-            type: string
-        - name: Locale cookie
-          in: header
-          required: false
-          description: Locale cookie
-          schema:
-            type: string
-      requestBody:
-        description: Optional description in *Markdown*
-        required: true
-        content:
-          application/x-www-form-urlencoded:
-            schema:
-              type: object
-              properties:
-                _csrf:
-                  type: string
-                  example: 'c316e550-23e3-4fee-8cee-f8079a630fba'
-                id_code:
-                  type: string
-                  minimum: 0
-                  maximum: 11
-                  example: '60001019906'
-              required:
-                - _csrf
-                - id_code
-      responses:
-        '200':
-          description: HTML view with the verification code
-          content:
-            text/html:
-              schema:
-                type: string
-        '400':
-          description: Bad request
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-            text/html:
-              schema:
-                type: string
-                example: 'The HTML error view is displayed'
-        '403':
-          description: Forbidden (invalid CSRF token)
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-            text/html:
-              schema:
-                type: string
-                example: 'The HTML error view is displayed'
-        '500':
-          description: An internal error occurred
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-            text/html:
-              schema:
-                type: string
-                example: 'The HTML error view is displayed'
-        '502':
-          description: External service is not available
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-            text/html:
-              schema:
-                type: string
-                example: 'The HTML error view is displayed'
-  /auth/sid/poll:
-    get:
-      tags:
-        - smart-id
-      summary: Poll for the Smart-ID authentication process result
-      operationId: checkSidAuthStatus
-      description: |
-        Poll the Smart-ID authentication status.
-      parameters:
-        - name: Session cookie
-          in: header
-          required: true
-          description: Session cookie
-          schema:
-            type: string
-        - name: Locale cookie
-          in: header
-          required: false
-          description: Locale cookie
-          schema:
-            type: string
-      responses:
-        '200':
-          description: Response status of Smart-ID authentication polling
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  name:
-                    type: string
-                    enum: [ PENDING, COMPLETED ]
-        '400':
-          description: Bad request
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-            text/html:
-              schema:
-                type: string
-                example: 'The HTML error view is displayed'
-        '500':
-          description: An internal error occurred
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-            text/html:
-              schema:
-                type: string
-                example: 'The HTML error view is displayed'
-  /auth/sid/poll/cancel:
-    post:
-      tags:
-        - smart-id
-      summary: Cancel the Smart-ID authentication poll process
-      operationId: checkSidAuthStatusCancel
-      description: |
-        Cancel Smart-ID authentication result polling
-      parameters:
-        - name: Session cookie
-          in: header
-          required: true
-          description: Session cookie
-          schema:
-            type: string
-        - name: Locale cookie
-          in: header
-          required: false
-          description: Locale cookie
-          schema:
-            type: string
-      requestBody:
-        description: Optional description in *Markdown*
-        required: true
-        content:
-          application/x-www-form-urlencoded:
-            schema:
-              type: object
-              properties:
-                _csrf:
-                  type: string
-                  example: 'c316e550-23e3-4fee-8cee-f8079a630fba'
-              required:
-                - _csrf
-      responses:
-        '302':
-          description: Smart-ID authentication canceled
-          headers:
-            Location:
-              schema:
-                type: string
-              description: /auth/init?login_challenge=123
-        '400':
-          description: Bad request
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-            text/html:
-              schema:
-                type: string
-                example: 'The HTML error view is displayed'
-        '403':
-          description: Forbidden (invalid CSRF token)
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-            text/html:
-              schema:
-                type: string
-                example: 'The HTML error view is displayed'
-        '500':
-          description: An internal error occurred
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-            text/html:
-              schema:
-                type: string
-                example: 'The HTML error view is displayed'
   /auth/eidas/init:
     post:
       tags:
