# src/main/java/ee/ria/taraauthserver/authentication/smartid/notificationbased/AuthSidCancelController.java
@@ -1,68 +1,0 @@
-package ee.ria.taraauthserver.authentication.smartid.notificationbased;
-
-import ee.ria.taraauthserver.error.ErrorCode;
-import ee.ria.taraauthserver.error.exceptions.BadRequestException;
-import ee.ria.taraauthserver.logging.StatisticsLogger;
-import ee.ria.taraauthserver.session.SessionUtils;
-import ee.ria.taraauthserver.session.TaraAuthenticationState;
-import ee.ria.taraauthserver.session.TaraSession;
-import ee.ria.taraauthserver.utils.RequestUtils;
-import lombok.extern.slf4j.Slf4j;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
-import org.springframework.http.MediaType;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.RestController;
-import org.springframework.web.servlet.view.RedirectView;
-
-import java.util.EnumSet;
-
-import static ee.ria.taraauthserver.session.TaraAuthenticationState.AUTHENTICATION_CANCELED;
-import static ee.ria.taraauthserver.session.TaraAuthenticationState.AUTHENTICATION_FAILED;
-import static ee.ria.taraauthserver.session.TaraAuthenticationState.AUTHENTICATION_SUCCESS;
-import static ee.ria.taraauthserver.session.TaraAuthenticationState.INIT_SID;
-import static ee.ria.taraauthserver.session.TaraAuthenticationState.LEGAL_PERSON_AUTHENTICATION_COMPLETED;
-import static ee.ria.taraauthserver.session.TaraAuthenticationState.NATURAL_PERSON_AUTHENTICATION_COMPLETED;
-import static ee.ria.taraauthserver.session.TaraAuthenticationState.POLL_SID_STATUS;
-import static ee.ria.taraauthserver.session.TaraAuthenticationState.POLL_SID_STATUS_CANCELED;
-import static ee.ria.taraauthserver.session.TaraSession.TARA_SESSION;
-import static java.lang.String.format;
-import static java.util.EnumSet.of;
-
-@Slf4j
-@RestController
-@ConditionalOnProperty(
-        value = {
-                "tara.auth-methods.smart-id.enabled",
-                "tara.auth-methods.smart-id.notification-based.enabled"
-        },
-        havingValue = "true"
-)
-public class AuthSidCancelController {
-    static final EnumSet<TaraAuthenticationState> ALLOWED_STATES = of(INIT_SID, POLL_SID_STATUS, AUTHENTICATION_FAILED, NATURAL_PERSON_AUTHENTICATION_COMPLETED, LEGAL_PERSON_AUTHENTICATION_COMPLETED);
-
-    @Autowired
-    StatisticsLogger statisticsLogger;
-
-    @PostMapping(value = "/auth/sid/poll/cancel", produces = MediaType.APPLICATION_JSON_VALUE)
-    public RedirectView authSidPollCancel(TaraSession taraSession) {
-        if (taraSession.getState().equals(AUTHENTICATION_SUCCESS)) {
-            String userCancelUri = taraSession.getLoginRequestInfo().getUserCancelUri();
-            logAndInvalidateSession(taraSession);
-            return new RedirectView(userCancelUri);
-        } else if (!ALLOWED_STATES.contains(taraSession.getState())) {
-            throw new BadRequestException(ErrorCode.SESSION_STATE_INVALID, format("Invalid authentication state: '%s', expected one of: %s", taraSession.getState(), ALLOWED_STATES));
-        }
-
-        taraSession.setState(POLL_SID_STATUS_CANCELED);
-        SessionUtils.getHttpSession().setAttribute(TARA_SESSION, taraSession);
-        log.warn("Smart ID authentication process has been canceled");
-        return new RedirectView("/auth/init?login_challenge=" + taraSession.getLoginRequestInfo().getChallenge() + RequestUtils.getLangParam(taraSession));
-    }
-
-    private void logAndInvalidateSession(TaraSession taraSession) {
-        taraSession.setState(AUTHENTICATION_CANCELED);
-        statisticsLogger.log(taraSession);
-        SessionUtils.invalidateSession();
-    }
-}
