# src/main/java/ee/ria/taraauthserver/authentication/smartid/notificationbased/AuthSidPollController.java
@@ -1,53 +1,0 @@
-package ee.ria.taraauthserver.authentication.smartid.notificationbased;
-
-import ee.ria.taraauthserver.error.ErrorCode;
-import ee.ria.taraauthserver.error.exceptions.BadRequestException;
-import ee.ria.taraauthserver.error.exceptions.ServiceNotAvailableException;
-import ee.ria.taraauthserver.session.SessionUtils;
-import ee.ria.taraauthserver.session.TaraAuthenticationState;
-import ee.ria.taraauthserver.session.TaraSession;
-import lombok.extern.slf4j.Slf4j;
-import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.RestController;
-
-import java.util.EnumSet;
-import java.util.Map;
-
-import static ee.ria.taraauthserver.session.TaraAuthenticationState.AUTHENTICATION_FAILED;
-import static ee.ria.taraauthserver.session.TaraAuthenticationState.INIT_SID;
-import static ee.ria.taraauthserver.session.TaraAuthenticationState.NATURAL_PERSON_AUTHENTICATION_COMPLETED;
-import static ee.ria.taraauthserver.session.TaraAuthenticationState.POLL_SID_STATUS;
-import static java.util.Map.of;
-
-@Slf4j
-@RestController
-@ConditionalOnProperty(
-        value = {
-                "tara.auth-methods.smart-id.enabled",
-                "tara.auth-methods.smart-id.notification-based.enabled"
-        },
-        havingValue = "true"
-)
-public class AuthSidPollController {
-    private static final EnumSet<TaraAuthenticationState> ALLOWED_STATES = EnumSet.of(INIT_SID, POLL_SID_STATUS, AUTHENTICATION_FAILED, NATURAL_PERSON_AUTHENTICATION_COMPLETED);
-
-    @GetMapping(value = "/auth/sid/poll")
-    public Map<String, String> authSidPoll(TaraSession taraSession) {
-        SessionUtils.assertSessionInState(taraSession, ALLOWED_STATES);
-
-        if (taraSession.getState() == NATURAL_PERSON_AUTHENTICATION_COMPLETED) {
-            return of("status", "COMPLETED");
-        } else if (taraSession.getState() == AUTHENTICATION_FAILED) {
-            ErrorCode errorCode = taraSession.getAuthenticationResult().getErrorCode();
-            if (errorCode.equals(ErrorCode.ERROR_GENERAL))
-                throw new IllegalStateException(errorCode.getMessage());
-            else if (errorCode.equals(ErrorCode.SID_INTERNAL_ERROR))
-                throw new ServiceNotAvailableException(errorCode, "Sid poll failed", null);
-            else
-                throw new BadRequestException(taraSession.getAuthenticationResult().getErrorCode(), "Sid poll failed");
-        } else
-            return of("status", "PENDING");
-    }
-
-}
