# src/main/java/ee/ria/taraauthserver/authentication/smartid/notificationbased/SmartIdNotificationBasedController.java
@@ -1,59 +1,0 @@
-package ee.ria.taraauthserver.authentication.smartid.notificationbased;
-
-import ee.ria.taraauthserver.config.properties.AuthenticationType;
-import ee.ria.taraauthserver.error.exceptions.BadRequestException;
-import ee.ria.taraauthserver.session.SessionUtils;
-import ee.ria.taraauthserver.session.TaraSession;
-import ee.ria.taraauthserver.utils.ValidNationalIdNumber;
-import lombok.Data;
-import lombok.extern.slf4j.Slf4j;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
-import org.springframework.http.MediaType;
-import org.springframework.stereotype.Controller;
-import org.springframework.ui.Model;
-import org.springframework.validation.annotation.Validated;
-import org.springframework.web.bind.annotation.ModelAttribute;
-import org.springframework.web.bind.annotation.PostMapping;
-
-import static ee.ria.taraauthserver.error.ErrorCode.INVALID_REQUEST;
-import static ee.ria.taraauthserver.session.TaraAuthenticationState.INIT_AUTH_PROCESS;
-
-@Slf4j
-@Validated
-@Controller
-@ConditionalOnProperty(
-        value = {
-                "tara.auth-methods.smart-id.enabled",
-                "tara.auth-methods.smart-id.notification-based.enabled"
-        },
-        havingValue = "true"
-)
-public class SmartIdNotificationBasedController {
-
-    @Autowired
-    private AuthSidNotificationBasedService authSidNotificationBasedService;
-
-    @PostMapping(value = "/auth/sid/init", produces = MediaType.TEXT_HTML_VALUE, consumes = MediaType.APPLICATION_FORM_URLENCODED_VALUE)
-    public String authSidInit(@Validated @ModelAttribute(value = "credential") SidCredential sidCredential, Model model,
-                              TaraSession taraSession) {
-        log.info("Initiating Smart-ID authentication session");
-        validateSession(taraSession);
-        String verificationCode = authSidNotificationBasedService.startSidAuthSession(taraSession, sidCredential.getIdCode());
-        model.addAttribute("smartIdVerificationCode", verificationCode);
-        return "sidLoginCode";
-    }
-
-    private void validateSession(TaraSession taraSession) {
-        SessionUtils.assertSessionInState(taraSession, INIT_AUTH_PROCESS);
-        if (!taraSession.getAllowedAuthMethods().contains(AuthenticationType.SMART_ID)) {
-            throw new BadRequestException(INVALID_REQUEST, "Smart-ID authentication method is not allowed");
-        }
-    }
-
-    @Data
-    public static class SidCredential {
-        @ValidNationalIdNumber(message = "{message.mid-rest.error.invalid-identity-code}")
-        private String idCode;
-    }
-}
